# fxbl

./: .gitignore  BUILDING.md  CMakeLists.txt  DEVELOPER.md  INTRODUCTION.md  LICENSE  PROJECT_SUMMARY.md  README.md  SOURCES.md  TEST_RESULTS.md  build.sh
.cache/clangd/index/: basic_usage.cpp.957767683CE97452.idx  basic_usage.cpp.BAA3996F27ABC802.idx  cloud_computing.cpp.B613BAC6F3CD7EC1.idx  cloud_computing.cpp.DFD886D8B6551721.idx  core.hpp.CEE63B8544EA44A4.idx  homomorphic.hpp.31EA5939B7B6A1F4.idx  homomorphic_ops.cpp.126DB33055BA1A46.idx  homomorphic_ops.cpp.57E6D90EFDF0C17E.idx  lattice.hpp.B19BA18396FA5BA2.idx  main.cpp.92804FE9680629D3.idx  main.cpp.D6D6990DDE3300E2.idx  neural.hpp.83BEEB49999B83C7.idx  protocol.cpp.4D274616566F3C5F.idx  protocol.cpp.64CFBDEEEF663F54.idx  ring_lwe.cpp.74FF8F7F92ECC292.idx  ring_lwe.cpp.AC131F0E81357B46.idx  test_file_encryption.cpp.0024B61E29ED9BF5.idx  test_homomorphic_simple.cpp.873D474FF5D9F8EA.idx  test_security_attacks.cpp.BF7DEFEDE02C0635.idx
examples/: basic_usage.cpp  cloud_computing.cpp  homomorphic_ops.cpp  test_file_encryption.cpp  test_homomorphic_simple.cpp  test_security_attacks.cpp
include/fxbl/: core.hpp  homomorphic.hpp  lattice.hpp  neural.hpp
src/: main.cpp
src/core/: protocol.cpp
src/lattice/: ring_lwe.cpp
